# frunk

./: .gitignore  .travis.yml  AGENT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  aliases.js  crates.js  dependency-graph.puml  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js  travis-after-success  travis_benches
.github/: copilot-instructions.md
.github/workflows/: benchmarks.yml  ci.yml  rustdoc.yml
benches/: empty.rs  generic.rs  hlist.rs  labelled.rs  monoid.rs  path.rs  semigroup.rs  transmogrify.rs  validated.rs
core/: Cargo.toml
core/src/: coproduct.rs  field.rs  generic.rs  hlist.rs  indices.rs  labelled.rs  labelled_generic.rs  lib.rs  macros.rs  named.rs  named_field.rs  path.rs  test_structs.rs  traits.rs  tuples.rs  utils.rs
derives/: Cargo.toml
derives/src/: common.rs  derive_generic.rs  derive_labelled_generic.rs  lib.rs  list_builder.rs
derives/src/list_builder/: type_helpers.rs
derives/src/list_builder/type_helpers/: annotations.rs  arg_pair.rs  pluck_param.rs  where_line.rs
dev/bench/: data.js
examples/: generic.rs  labelled.rs  paths.rs
frunk/: all.html  derive.Generic.html  derive.LabelledGeneric.html  index.html  macro.Coprod.html  macro.HList!.html  macro.HList.html  macro.Hlist!.html  macro.Hlist.html  macro.field.html  macro.hlist.html  macro.hlist_pat!.html  macro.hlist_pat.html  macro.poly_fn!.html  macro.poly_fn.html  sidebar-items.js
frunk/coproduct/: enum.CNil.html  enum.Coproduct.html  index.html  sidebar-items.js  trait.CoprodInjector.html  trait.CoprodUninjector.html  trait.CoproductEmbedder.html  trait.CoproductFoldable.html  trait.CoproductMappable.html  trait.CoproductSelector.html  trait.CoproductSubsetter.html  trait.CoproductTaker.html
frunk/generic/: fn.convert_from.html  fn.from_generic.html  fn.into_generic.html  fn.map_inter.html  fn.map_repr.html  index.html  sidebar-items.js  trait.Generic.html
frunk/hlist/: fn.h_cons.html  fn.lift_from.html  index.html  sidebar-items.js  struct.HCons.html  struct.HNil.html  trait.HFoldLeftable.html  trait.HFoldRightable.html  trait.HList.html  trait.HMappable.html  trait.HZippable.html  trait.IntoTuple2.html  trait.LiftFrom.html  trait.LiftInto.html  trait.Plucker.html  trait.Sculptor.html  (+1 more)
frunk_core/: all.html  index.html  macro.Coprod!.html  macro.Coprod.html  macro.HList.html  macro.Hlist.html  macro.field!.html  macro.field.html  macro.hlist!.html  macro.hlist.html  macro.hlist_pat!.html  macro.hlist_pat.html  macro.poly_fn.html  sidebar-items.js
frunk_derives/: all.html  derive.Generic.html  derive.LabelledGeneric.html  index.html  sidebar-items.js
frunk_laws/: all.html  index.html  sidebar-items.js
frunk_proc_macro_helpers/: all.html  enum.StructType.html  fn.build_coprod_constr.html  fn.build_coprod_type.html  fn.build_coprod_unreachable_arm.html  fn.build_field_expr.html  fn.build_field_pat.html  fn.build_field_type.html  fn.build_hlist_constr.html  fn.build_hlist_type.html  fn.build_label_type.html  fn.build_path_type.html  fn.call_site_ident.html  fn.find_idents_in_expr.html  fn.ref_generics.html  fn.to_ast.html  index.html  sidebar-items.js  struct.FieldBinding.html  struct.FieldBindings.html  struct.VariantBinding.html  struct.VariantBindings.html
frunk_proc_macros/: all.html  index.html  macro.Path.html  macro.path!.html  macro.path.html  sidebar-items.js
frunk_proc_macros_impl/: all.html  derive.proc_macro_hack_path.html  index.html  macro.Path!.html  macro.Path.html  macro.proc_macro_hack_path!.html  macro.proc_macro_hack_path.html  sidebar-items.js
laws/: Cargo.toml
laws/src/: lib.rs  monoid_laws.rs  semigroup_laws.rs  wrapper.rs
proc-macro-helpers/: Cargo.toml
proc-macro-helpers/src/: lib.rs
proc-macros/: Cargo.toml
proc-macros-impl/: Cargo.toml
proc-macros-impl/src/: lib.rs
proc-macros/src/: lib.rs  list_builder.rs
proc_macro2/: enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
proc_macro_hack/: attr.proc_macro_hack.html  index.html
quote/: trait.IdentFragment.html
search.index/: 01288a1d3d42.js  01c63b324d2b.js  03d101626a52.js  05c25d9b90fa.js  06324bb51f.js  06be06039da8.js  08123d330e2d.js  087ea6ab858c.js  08b061c343d2.js  08c47fd1d17c.js  09b7145b57de.js  09ed68c2573e.js  0ac498d7c8.js  0b43d93d6344.js  0b5c2d6d53.js  0dd333e6b7.js  0df02a7a5a.js  0f0a19968f.js  0f1fd419f090.js  11365a5ead.js  117f5f09ab44.js  11a1138877f3.js  11eada1bef.js  1218a51bac.js  127d765445c0.js  12cf15d30105.js  133b8b0cc4e7.js  13bb0334756a.js  14b88d8b17.js  14b9c953d6.js  153ba2acbb55.js  154daf68c71b.js  177a03fe30f3.js  18b952f377.js  1a80b41cde24.js  1a93bf402308.js  1b7e93154404.js  1ccbd75680.js  1ceec0dfa3b6.js  1db126a299.js  (+157 more)
src/: applicative.rs  aunion.rs  coproduct.rs  equiv.rs  functor.rs  generic.rs  hlist.rs  kind.rs  lib.rs  main.rs  monoid.rs  semi.rs  semigroup.rs  show.rs  validated.rs  validation.rs
syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.Fields.html  enum.GenericArgument.html  enum.GenericParam.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.NestedMeta.html  enum.PathArguments.html  enum.ReturnType.html  enum.StrStyle.html  enum.TraitBoundModifier.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.Visibility.html  enum.WherePredicate.html  index.html  sidebar-items.js  struct.Abi.html  struct.AngleBracketedGenericArguments.html  struct.Attribute.html  struct.BareFnArg.html  struct.Binding.html  struct.BoundLifetimes.html  struct.ConstParam.html  struct.Constraint.html  struct.DataEnum.html  struct.DataStruct.html  struct.DataUnion.html  struct.DeriveInput.html  struct.Error.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAssignOp.html  (+87 more)
tests/: coproduct_tests.rs  derivation_test.rs  derivation_tests.rs  generic_tests.rs  labelled_tests.rs  macro_tests.rs  scratchpad.rs  validated_tests.rs
(+539 files in other folders)
