[package]
name = "frunk"
version = "0.2.2"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Frunk provides developers with a number of functional programming tools like HList, Coproduct, Generic, LabelledGeneric, Validated, Monoid, Semigroup and friends."
license = "MIT"
documentation = "https://docs.rs/frunk"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "HList", "Generic", "Validated", "Monoid"]
readme = "README.md"

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[dev-dependencies]
time = "0.1.36"

[dependencies.frunk_core]
path = "core"
version = "0.2.2"

[dependencies.frunk_derives]
path = "derives"
version = "0.2.2"

[dev-dependencies.frunk_laws]
path = "laws"
version = "0.2.2"

[dependencies]
serde = { version = "^1.0", optional = true, features = [ "derive" ] }

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
# codegen-units = 1 https://users.rust-lang.org/t/odd-benchmark-results-compiler-optimisation-wall/10503

[workspace]
members = [
    "core",
    "derives",
    "laws"
]
