[package]
name = "frunk"
version = "0.2.4"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Frunk provides developers with a number of functional programming tools like HList, Coproduct, Generic, LabelledGeneric, Validated, Monoid, Semigroup and friends."
license = "MIT"
documentation = "https://docs.rs/frunk"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "HList", "Generic", "Validated", "Monoid"]
readme = "README.md"

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[dev-dependencies]
time = "0.1.36"

[dependencies.frunk_core]
path = "core"
default-features = false
version = "0.2.4"

[dependencies.frunk_proc_macros]
path = "proc-macros"
default-features = false
optional = true
version = "0.0.2"

[dependencies.frunk_derives]
path = "derives"
default-features = false
version = "0.2.4"

[dev-dependencies.frunk_laws]
path = "laws"
default-features = false
version = "0.2.4"

[dependencies]
serde = { version = "^1.0", optional = true, features = [ "derive" ] }

[features]
default = ["validated", "proc-macros"]
validated = ["std"]
proc-macros = ["frunk_proc_macros"]
std = ["frunk_core/std"]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1 # https://users.rust-lang.org/t/odd-benchmark-results-compiler-optimisation-wall/10503

[workspace]
members = [
    "proc-macro-helpers",
    "core",
    "proc-macros-impl",
    "proc-macros",
    "derives",
    "laws"
]
