[package]
name = "frunk"
edition = "2021"
version = "0.4.2"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Frunk provides developers with a number of functional programming tools like HList, Coproduct, Generic, LabelledGeneric, Validated, Monoid, Semigroup and friends."
license = "MIT"
documentation = "https://docs.rs/frunk"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "HList", "Generic", "Validated", "Monoid"]
readme = "README.md"

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[dev-dependencies]
time = "0.3"

[dependencies.frunk_core]
path = "core"
default-features = false
version = "0.4.2"

[dependencies.frunk_proc_macros]
path = "proc-macros"
default-features = false
optional = true
version = "0.1.2"

[dependencies.frunk_derives]
path = "derives"
default-features = false
version = "0.4.2"

[dev-dependencies.frunk_laws]
path = "laws"
default-features = false
version = "0.4.2"

[dependencies]
serde = { version = "^1.0", optional = true, features = [ "derive" ] }

[features]
default = ["validated", "proc-macros"]
validated = ["std"]
proc-macros = ["frunk_proc_macros"]
std = ["frunk_core/std"]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1 # https://users.rust-lang.org/t/odd-benchmark-results-compiler-optimisation-wall/10503

[workspace]
members = [
    "proc-macro-helpers",
    "core",
    "proc-macros",
    "derives",
    "laws"
]
