[package]
name = "frunk_core"
version = "0.2.4"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Frunk core provides developers with HList, Coproduct, LabelledGeneric and Generic"
license = "MIT"
documentation = "https://docs.rs/frunk_core"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "HList", "Generic", "Coproduct", "LabelledGeneric"]

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[dependencies]
serde = { version = "^1.0", optional = true, features = [ "derive" ] }

[dev-dependencies.frunk_derives]
path = "../derives"
version = "0.2.4"

[dev-dependencies.frunk]
path = ".."
version = "0.2.4"

[dev-dependencies.frunk_proc_macros]
path = "../proc-macros"
version = "0.0.2"