[package]
name = "frunk_core"
edition = "2021"
version = "0.4.2"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Frunk core provides developers with HList, Coproduct, LabelledGeneric and Generic"
license = "MIT"
documentation = "https://docs.rs/frunk_core"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "HList", "Generic", "Coproduct", "LabelledGeneric"]

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "^1.0", optional = true, features = [ "derive" ] }

[dev-dependencies.frunk_derives]
path = "../derives"
default-features = false
version = "0.4.1"

[dev-dependencies.frunk]
path = ".."
default-features = false
version = "0.4.2"

[dev-dependencies.frunk_proc_macros]
path = "../proc-macros"
default-features = false
version = "0.1.2"
