[package]
name = "frunk_derives"
version = "0.0.17"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "frunk_derives contains the custom derivations for certain traits in Frunk."
license = "MIT"
documentation = "https://docs.rs/frunk_derives"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "derives"]

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"

[dependencies.frunk_core]
path = "../core"
version = "0.0.16"
