[package]
name = "frunk_derives"
version = "0.2.4"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "frunk_derives contains the custom derivations for certain traits in Frunk."
license = "MIT"
documentation = "https://docs.rs/frunk_derives"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "derives"]

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"

[dependencies.frunk_proc_macro_helpers]
path = "../proc-macro-helpers"
default-features = false
version = "0.0.2"
