[package]
name = "frunk_laws"
edition = "2021"
version = "0.5.2"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "frunk_laws contains laws for algebras declared in Frunk."
license = "MIT"
documentation = "https://docs.rs/frunk_laws"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "laws", "testing", "algebras"]

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[dependencies.frunk]
path = ".."
default-features = false
version = "0.4.3"
features = ["std"]

[dependencies]
quickcheck = "1.0.3"
