[package]
name = "frunk_proc_macro_helpers"
version = "0.0.3"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Common internal functions for frunk's proc macros"
license = "MIT"
documentation = "https://docs.rs/frunk_proc_macro_helpers"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "macros", "internal"]

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[dependencies.frunk_core]
path = "../core"
default-features = false
version = "0.3.0"
