[package]
name = "frunk_proc_macro_helpers"
edition = "2021"
version = "0.1.2"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Common internal functions for frunk's proc macros"
license = "MIT"
documentation = "https://docs.rs/frunk_proc_macro_helpers"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "macros", "internal"]

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"

[dependencies.frunk_core]
path = "../core"
default-features = false
version = "0.4.2"
