[package]
name = "frunk_proc_macros_impl"
edition = "2018"
version = "0.1.0"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Proc macros inernal implementations for Frunk"
license = "MIT"
documentation = "https://docs.rs/frunk_proc_macros_internal"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "macros", "internal"]

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[dependencies]
syn = "1"
quote = "1"
proc-macro-hack = "0.5"

[lib]
proc-macro = true


[dependencies.frunk_core]
path = "../core"
default-features = false
version = "0.4.0"

[dependencies.frunk_proc_macro_helpers]
path = "../proc-macro-helpers"
default-features = false
version = "0.1.0"
