[package]
name = "frunk_proc_macros"
edition = "2018"
version = "0.1.0"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Proc macros for Frunk"
license = "MIT"
documentation = "https://docs.rs/frunk_proc_macros"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "macros"]

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[dependencies.proc-macro-hack]
version = "0.5"

[dependencies.frunk_core]
path = "../core"
default-features = false
version = "0.4.0"

[dependencies.frunk_proc_macros_impl]
path = "../proc-macros-impl"
default-features = false
version = "0.1.0"

[dev-dependencies.frunk]
path = "../."
default-features = false
version = "0.4.0"
