[package]
name = "frunk_proc_macros"
edition = "2021"
version = "0.1.2"
authors = ["Lloyd <lloydmeta@gmail.com>"]
description = "Proc macros for Frunk"
license = "MIT"
documentation = "https://docs.rs/frunk_proc_macros"
repository = "https://github.com/lloydmeta/frunk"
keywords = ["Frunk", "macros"]

[badges]
travis-ci = { repository = "lloydmeta/frunk" }

[dependencies]
syn = {version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1.0.66"

[lib]
proc-macro = true


[dependencies.frunk_core]
path = "../core"
default-features = false
version = "0.4.2"

[dependencies.frunk_proc_macro_helpers]
path = "../proc-macro-helpers"
default-features = false
version = "0.1.2"
